static analysis warnings in User Vm Manager